# prjtang

./: COPYING  devices.json  environment.sh
fuzzers/eagle/003-mslice_lut_init/: fuzzer.py  lut.pnl
fuzzers/eagle/004-lslice_lut_init/: empty.pnl  fuzzer.py  lut.pnl
fuzzers/eagle/005-reg_config/: fuzzer.py  reg.pnl
fuzzers/eagle/006-lslice_mux_config/: fuzzer.py  lslice_mux.pnl
fuzzers/eagle/010-slice_modes/: fuzzer.py  modes.pnl
fuzzers/eagle/100-tile_input_routing/: fuzzer.py
fuzzers/eagle/101-tile_output_routing/: empty.pnl  fuzzer.py
fuzzers/eagle/102-tile_interconnect_routing/: fuzzer.py
fuzzers/eagle/103-tile_gnd_routing/: fuzzer.py
fuzzers/eagle/104-tile_gclk_routing/: fuzzer.py
fuzzers/eagle/106-tile_clk_output_routing/: fuzzer.py  routing.pnl
fuzzers/eagle/107-tile_local_routing/: fuzzer.py
libtang/: CMakeLists.txt
libtang/include/: BitDatabase.hpp  Bitstream.hpp  CRAM.hpp  Chip.hpp  ChipConfig.hpp  Database.hpp  DatabasePath.hpp  Tile.hpp  TileConfig.hpp  Util.hpp
libtang/src/: BitDatabase.cpp  Bitstream.cpp  CRAM.cpp  Chip.cpp  ChipConfig.cpp  Database.cpp  PyTang.cpp  Tile.cpp  TileConfig.cpp
templates/: pnl2bit.tcl
tools/: annotate_tilegrid.py  create_empty_bitdbs.py  get_tilegrid_all.py  html_all.py  html_bits.py  html_tilegrid.py
util/common/: tangdinasty.py  tiles.py
util/fuzz/: fuzzconfig.py  fuzzloops.py  nonrouting.py  routing.py
